email spacing issue and listing product product count message added

--- a/resources/assets/scss/_helpers.scss
+++ b/resources/assets/scss/_helpers.scss
@@ -486,3 +486,8 @@ footer .bl-1{
 .filter-grayscale{
     filter: grayscale(100%);
 }
+
+.product-view{
+    font-size: 1.15em;
+    color: #afaeae;
+}
